[AIRFLOW-964] Allow Airflow to live in a subpath Copied from https://github.com/apache/incubator-airflow/pull/2818

--- a/airflow/config_templates/default_airflow.cfg
+++ b/airflow/config_templates/default_airflow.cfg
@@ -160,6 +160,10 @@ default_gpus = 0
 # airflow sends to point links to the right web server
 base_url = http://localhost:8080
 
+# The path where airflow is configured to live, in case you are not
+# alone on the domain
+root_path =
+
 # The ip specified when starting the web server
 web_server_host = 0.0.0.0
 
@@ -360,12 +364,12 @@ authenticate = False
 
 [ldap]
 # set this to ldaps://<your.ldap.server>:<port>
-uri = 
+uri =
 user_filter = objectClass=*
 user_name_attr = uid
 group_member_attr = memberOf
-superuser_filter = 
-data_profiler_filter = 
+superuser_filter =
+data_profiler_filter =
 bind_user = cn=Manager,dc=example,dc=com
 bind_password = insecure
 basedn = dc=example,dc=com
