[AIRFLOW-964] Allow Airflow to live in a subpath Copied from https://github.com/apache/incubator-airflow/pull/2952

--- a/airflow/config_templates/default_airflow.cfg
+++ b/airflow/config_templates/default_airflow.cfg
@@ -138,6 +138,10 @@ killed_task_cleanup_time = 60
 # database directly, while the json_client will use the api running on the
 # webserver
 api_client = airflow.api.client.local_client
+
+# If you set web_server_url_prefix, do NOT forget to append it here, ex:
+# endpoint_url = http://localhost:8080/myroot
+# So api will look like: http://localhost:8080/myroot/api/experimental/...
 endpoint_url = http://localhost:8080
 
 [api]
@@ -159,10 +163,6 @@ default_gpus = 0
 # cname you are using. This is used in automated emails that
 # airflow sends to point links to the right web server
 base_url = http://localhost:8080
-
-# The path where airflow is configured to live, in case you are not
-# alone on the domain
-root_path =
 
 # The ip specified when starting the web server
 web_server_host = 0.0.0.0
@@ -289,6 +289,10 @@ celery_result_backend = db+mysql://airflow:airflow@localhost:3306/airflow
 # Celery Flower is a sweet UI for Celery. Airflow has a shortcut to start
 # it `airflow flower`. This defines the IP that Celery Flower runs on
 flower_host = 0.0.0.0
+
+# The root URL for Flower
+# Ex: flower_url_prefix = /flower
+flower_url_prefix =
 
 # This defines the port that Celery Flower runs on
 flower_port = 5555
